Some ccs changes

--- a/CCSB/wwwroot/css/site.css
+++ b/CCSB/wwwroot/css/site.css
@@ -77,3 +77,7 @@ body {
     line-height: 60px; /* Vertically center the text there */
     background-color: #fff !important;
 }
+
+th, td {
+    color: #fff;
+}
