--- a/Test omgeving/UGOZ_Marcel_Roesink/UGOZ_Marcel_Roesink/Views/Shared/_LoginPartial.cshtml
+++ b/Test omgeving/UGOZ_Marcel_Roesink/UGOZ_Marcel_Roesink/Views/Shared/_LoginPartial.cshtml
@@ -13,14 +13,18 @@
 }
 else
 {
-    <ul class="nav navbar-nav">
-        <li>
-            @*@Html.ActionLink("Registreer","register", "Account", routeValues:null, htmlAttributes:new { id = "registerLink"})*@
-            <a id="registerLink" class="nav-link text-black-50" asp-action="Register" asp-controller="Account">Registreren</a>
-        </li>
-        <li>
-            @*@Html.ActionLink("Login","Login","Account", routeValues:null, new { id = "loginLink" })*@
-            <a id="loginLink" class="nav-link text-black-50" asp-action="Login" asp-controller="Account">Inloggen</a>
-        </li>
-    </ul>
+<ul class="nav navbar-nav">
+    <li>
+        @*@Html.ActionLink("Registreer","register", "Account", routeValues:null, htmlAttributes:new { id = "registerLink"})*@
+        <a id="registerLink" class="nav-link text-black-50" asp-action="Register" asp-controller="Account">Registreren</a>
+    </li>
+    <li>
+        @*@Html.ActionLink("Login","Login","Account", routeValues:null, new { id = "loginLink" })*@
+        <a id="loginLink" class="nav-link text-black-50" asp-action="Login" asp-controller="Account">Inloggen</a>
+    </li>
+    <li>
+        @*@Html.ActionLink("Login","Login","Account", routeValues:null, new { id = "loginLink" })*@
+        <a id="loginLink" class="nav-link text-black-50" asp-action="VoertuigRegister" asp-controller="Account">Voertuig Registreren</a>
+    </li>
+</ul>
 }
