--- a/Test omgeving/UGOZ_Marcel_Roesink/UGOZ_Marcel_Roesink/Views/Shared/_LoginPartial.cshtml
+++ b/Test omgeving/UGOZ_Marcel_Roesink/UGOZ_Marcel_Roesink/Views/Shared/_LoginPartial.cshtml
@@ -24,7 +24,7 @@ else
     </li>
     <li>
         @*@Html.ActionLink("Login","Login","Account", routeValues:null, new { id = "loginLink" })*@
-        <a id="loginLink" class="nav-link text-black-50" asp-action="VoertuigRegister" asp-controller="Account">Voertuig Registreren</a>
+        <a id="loginLink" class="nav-link text-black-50" asp-action="CrvRegister" asp-controller="Account">Voertuig Registreren</a>
     </li>
 </ul>
 }
