--- a/Test omgeving/UGOZ_Marcel_Roesink/UGOZ_Marcel_Roesink/Views/Account/CrvRegister.cshtml
+++ b/Test omgeving/UGOZ_Marcel_Roesink/UGOZ_Marcel_Roesink/Views/Account/CrvRegister.cshtml
@@ -1,42 +1,42 @@
-﻿@model UGOZ_Marcel_Roesink.Models.ViewModels.RegisterCrvViewModel
+﻿@model UGOZ_Marcel_Roesink.Models.RegisterCrvViewModel
 <h2>Voertuig Registreren</h2>
 <form method="post" asp-action="Register" asp-controller="Account">
     <h4>Account aanmaken</h4>
     <hr />
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group row">
-        <label class="col-md-2" asp-for="Type"></label>
+        <label class="col-md-2" asp-for="CrvType"></label>
         <div class="col-md-10">
-            <input asp-for="Type" class="form-control" />
-            <span asp-validation-for="Type" class="text-danger"></span>
+            <input asp-for="CrvType" class="form-control" />
+            <span asp-validation-for="CrvType" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group row">
-        <label class="col-md-2" asp-for="Merk"></label>
+        <label class="col-md-2" asp-for="CrvName"></label>
         <div class="col-md-10">
-            <input asp-for="Merk" class="form-control" />
-            <span asp-validation-for="Merk" class="text-danger"></span>
+            <input asp-for="CrvName" class="form-control" />
+            <span asp-validation-for="CrvName" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group row">
-        <label class="col-md-2" asp-for="lengte"></label>
+        <label class="col-md-2" asp-for="CrvLength"></label>
         <div class="col-md-10">
-            <input asp-for="lengte" class="form-control" />
-            <span asp-validation-for="lengte" class="text-danger"></span>
+            <input asp-for="CrvLength" class="form-control" />
+            <span asp-validation-for="CrvLength" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group row">
-        <label class="col-md-2" asp-for="stroom"></label>
+        <label class="col-md-2" asp-for="CrvElectricity"></label>
         <div class="col-md-10">
-            <input asp-for="stroom" class="form-control" />
-            <span asp-validation-for="stroom" class="text-danger"></span>
+            <input asp-for="CrvElectricity" class="form-control" />
+            <span asp-validation-for="CrvElectricity" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group row">
-        <label class="col-md-2" asp-for="kenteken"></label>
+        <label class="col-md-2" asp-for="CrvPlate"></label>
         <div class="col-md-10">
-            <input asp-for="kenteken" class="form-control" />
-            <span asp-validation-for="kenteken" class="text-danger"></span>
+            <input asp-for="CrvPlate" class="form-control" />
+            <span asp-validation-for="CrvPlate" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
@@ -52,5 +52,5 @@
 </form>
 
 @section Scripts{
-<partial name="_ValidationScriptsPartial" />
+    <partial name="_ValidationScriptsPartial" />
 }
