--- a/Test omgeving/UGOZ_Marcel_Roesink/UGOZ_Marcel_Roesink/Views/Account/CrvRegister.cshtml
+++ b/Test omgeving/UGOZ_Marcel_Roesink/UGOZ_Marcel_Roesink/Views/Account/CrvRegister.cshtml
@@ -1,13 +1,5 @@
-<<<<<<< Updated upstream
-﻿@model UGOZ_Marcel_Roesink.Models.RegisterCrvViewModel
-=======
-﻿@model UGOZ_Marcel_Roesink.Models.ViewModels.RegisterCrvViewModel
+@model UGOZ_Marcel_Roesink.Models.RegisterCrvViewModel
 
-
-<<<<<<< Updated upstream
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
 <h2>Voertuig Registreren</h2>
 <form method="post" asp-action="Register" asp-controller="Account">
     <h4>Account aanmaken</h4>
