--- a/Test omgeving/2/UGOZ_Marcel_Roesink/CCSB/Views/Shared/_LoginPartial.cshtml
+++ b/Test omgeving/2/UGOZ_Marcel_Roesink/CCSB/Views/Shared/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
                 <a class="text-black-50 nav-link" href="javascript:document.getElementById('logoutForm').submit()">Uitloggen</a>
             </li>
             <li>
-                <a id="Voertuigen" class="nav-link text-black-50" asp-action="index" asp-controller="Crv">Alle voertuigen</a>
+                <a id="Voertuigen" class="nav-link text-black-50" asp-action="index" asp-controller="Vehicle">Alle voertuigen</a>
             </li>
         </ul>
     </form>
@@ -26,7 +26,7 @@ else @if (signinManager.IsSignedIn(User) && User.IsInRole("Admin"))
             <a class="text-black-50 nav-link" href="javascript:document.getElementById('logoutForm').submit()">Uitloggen</a>
         </li>
         <li>
-            <a id="loginLink" class="nav-link text-black-50" asp-action="Crv" asp-controller="Crv">Inloggen</a>
+            <a id="loginLink" class="nav-link text-black-50" asp-action="Vehicle" asp-controller="Vehicle">test</a>
         </li>
     </ul>
 </form>
