Styling fixed and language changes

--- a/CCSB/CCSB/Views/Reserveringen/Create.cshtml
+++ b/CCSB/CCSB/Views/Reserveringen/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model CCSB.Models.Reserveringen
 @inject Microsoft.AspNetCore.Identity.SignInManager<ApplicationUser> signinManager
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Aanmaken";
 }
 
-<h1>Create</h1>
+<h1>Reserveringen</h1>
 
-<h4>Reserveringen</h4>
+<h4>Reserveringen aanmaken</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -36,6 +36,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Terug naar lijst</a>
 </div>
 
