--- a/CCSB/CCSB/Views/Reserveringen/Details.cshtml
+++ b/CCSB/CCSB/Views/Reserveringen/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Details van de reserveringen</h1>
 
 <div>
     <h4>Reserveringen</h4>
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Pas aan</a> |
+    <a asp-action="Index">Terug naar de lijst</a>
 </div>
