--- a/CCSB/CCSB/Views/Reserveringen/Edit.cshtml
+++ b/CCSB/CCSB/Views/Reserveringen/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CCSB.Models.Reserveringen
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Aanpassen";
 }
 
-<h1>Edit</h1>
+<h1>Pas een reservering aan</h1>
 
 <h4>Reserveringen</h4>
 <hr />
@@ -36,6 +36,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Terug naar lijst</a>
 </div>
 
