--- a/CCSB/CCSB/Views/Vehicle/Create.cshtml
+++ b/CCSB/CCSB/Views/Vehicle/Create.cshtml
@@ -2,7 +2,7 @@
 @inject Microsoft.AspNetCore.Identity.SignInManager<ApplicationUser> signinManager
 
 @{
-    ViewData["Title"] = "Voeg toe";
+    ViewData["Title"] = "Voeg een voertuig toe";
 }
 
 
@@ -10,7 +10,6 @@
 {
     <h1>Voeg een voertuig toe</h1>
 
-    <h4>Crv</h4>
     <hr />
     <div class="row">
         <div class="col-md-4">
@@ -57,7 +56,7 @@
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Terug naar lijst</a>
     </div>
 }
 
