--- a/CCSB/CCSB/Views/Vehicle/Index.cshtml
+++ b/CCSB/CCSB/Views/Vehicle/Index.cshtml
@@ -9,10 +9,10 @@
 @if (signinManager.IsSignedIn(User) && User.IsInRole("Beheerder"))
 {
 
-    <h1>Index</h1>
+    <h1>Lijst van alle voertuigen</h1>
 
     <p>
-        <a asp-action="Create">Create New</a>
+        <a asp-action="Create">Maak een nieuwe voertuig aan</a>
     </p>
     <table class="table">
         <thead>
@@ -61,9 +61,9 @@
                         @Html.DisplayFor(modelItem => item.ApplicationUser.Email)
                     </td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                        <a asp-action="Edit" asp-route-id="@item.Id">Pas aan</a> |
                         <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id">Verwijderen</a>
                     </td>
                 </tr>
             }
@@ -72,11 +72,9 @@
 }
 else @if (signinManager.IsSignedIn(User))
 {
-<h1>Index</h1>
+<h1>Overzicht van voertuigen</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+
 <table class="table">
     <thead>
         <tr>
@@ -122,11 +120,6 @@ else @if (signinManager.IsSignedIn(User))
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.ApplicationUser.Email)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
         }
