--- a/CCSB/CCSB/Views/Reserveringen/Delete.cshtml
+++ b/CCSB/CCSB/Views/Reserveringen/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model CCSB.Models.Reserveringen
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Verwijder";
 }
 
-<h1>Delete</h1>
+<h1>Verwijderen</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Weet je zeker dat je de reservering wilt verwijderen</h3>
 <div>
     <h4>Reserveringen</h4>
     <hr />
@@ -34,6 +34,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Terug naar lijst</a>
     </form>
 </div>
