--- a/CCSB/CCSB/Views/Vehicle/Delete.cshtml
+++ b/CCSB/CCSB/Views/Vehicle/Delete.cshtml
@@ -2,14 +2,14 @@
 @inject Microsoft.AspNetCore.Identity.SignInManager<ApplicationUser> signinManager
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Verwijderen";
 }
 
 @if (signinManager.IsSignedIn(User) && User.IsInRole("Beheerder"))
 {
-    <h1>Delete</h1>
+    <h1>Verwijderen van een voertuig</h1>
 
-    <h3>Are you sure you want to delete this?</h3>
+    <h3>Weet je zeker dat je dit wilt verwijderen?</h3>
     <div>
         <h4>Crv</h4>
         <hr />
@@ -55,7 +55,7 @@
         <form asp-action="Delete">
             <input type="hidden" asp-for="Id" />
             <input type="submit" value="Delete" class="btn btn-danger" /> |
-            <a asp-action="Index">Back to List</a>
+            <a asp-action="Index">Terug naar lijst</a>
         </form>
     </div>
 }
