--- a/CCSB/CCSB/Views/Vehicle/Details.cshtml
+++ b/CCSB/CCSB/Views/Vehicle/Details.cshtml
@@ -8,10 +8,9 @@
 
 @if (signinManager.IsSignedIn(User) && User.IsInRole("Beheerder"))
 {
-    <h1>Details</h1>
+    <h1>Details van het voertuig</h1>
 
     <div>
-        <h4>Crv</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-2">
@@ -53,8 +52,8 @@
         </dl>
     </div>
     <div>
-        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Edit" asp-route-id="@Model.Id">Pas aan</a> |
+        <a asp-action="Index">Terug naar lijst</a>
     </div>
 }
 else
