--- a/CCSB/CCSB/Views/Vehicle/Edit.cshtml
+++ b/CCSB/CCSB/Views/Vehicle/Edit.cshtml
@@ -2,22 +2,15 @@
 @inject Microsoft.AspNetCore.Identity.SignInManager<ApplicationUser> signinManager
 
 @{
-    ViewData["Title"] = "Edit";
-}
-
-
-
-@{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Pas aan";
 }
 
 
 @if (signinManager.IsSignedIn(User) && User.IsInRole("Beheerder"))
 {
 
-    <h1>Edit</h1>
+    <h1>Pas voertuig aan</h1>
 
-    <h4>Crv</h4>
     <hr />
     <div class="row">
         <div class="col-md-4">
@@ -66,67 +59,11 @@
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Terug naar lijst</a>
     </div>
 }
-else @if (signinManager.IsSignedIn(User))
+else 
 {
-
-<h1>Edit</h1>
-
-<h4>Crv</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="CrvName" class="control-label"></label>
-                <input asp-for="CrvName" class="form-control" />
-                <span asp-validation-for="CrvName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CrvType" class="control-label"></label>
-                <input asp-for="CrvType" class="form-control" />
-                <span asp-validation-for="CrvType" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CrvLength" class="control-label"></label>
-                <input asp-for="CrvLength" class="form-control" />
-                <span asp-validation-for="CrvLength" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CrvElectricity" class="control-label"></label>
-                <select asp-for="CrvElectricity"
-                        asp-items="@CCSB.Utility.Helper.GetYesNoForDropDown()"
-                        class="form-control">
-                    <option selected>-- Selecteer een keuze</option>
-                </select>
-                <span asp-validation-for="CrvElectricity" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CrvPlate" class="control-label"></label>
-                <input asp-for="CrvPlate" class="form-control" />
-                <span asp-validation-for="CrvPlate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ApplicationUserId" class="control-label"></label>
-                <select asp-for="ApplicationUserId" class="form-control" asp-items="ViewBag.ApplicationUserId"></select>
-                <span asp-validation-for="ApplicationUserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
-
 <ul class="nav navbar-nav">
 </ul>
 }
