--- a/CCSB/CCSB/wwwroot/css/site.css
+++ b/CCSB/CCSB/wwwroot/css/site.css
@@ -1,6 +1,25 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+body {
+    background-image: url(../img/Caravanbg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+footer.border-top.footer.text-muted {
+    background: white;
+}
+
+main.pb-3 {
+    background: white;
+    border: 2px black solid;
+    border-radius: 20px;
+    width: 100%;
+    margin-top: 10%;
+    padding: 20px 20px 20px 20px;
+}
+
 a.navbar-brand {
     white-space: normal;
     text-align: center;
@@ -60,7 +79,6 @@ html {
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
-    background-image: url("../img/Caravanbg.jpg") !important;
 }
 
 .footer {
