--- a/CCSB/CCSB/Views/Home/Index.cshtml
+++ b/CCSB/CCSB/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welkom</h1>
+    <p>Dit is het gebruikers portaal voor Camperstalling bentelo</p><br />
+    <p>Hier op kunnen gebruikers bekent bij zijn bij ons hun reservaties plaatsen</p><br />
+    <p>Had u graag willen registeren voor een camperstalling mail dan nu naar : ttest@test.nl</p>
 </div>
