--- a/CCSB/CCSB/Views/Reserveringen/Index.cshtml
+++ b/CCSB/CCSB/Views/Reserveringen/Index.cshtml
@@ -16,32 +16,33 @@
                 @Html.DisplayNameFor(model => model.StartDatum)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ApplicationUser.Email)
+                @Html.DisplayNameFor(model => model.Crv)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Vehicle)
+                @Html.DisplayNameFor(model => model.Crv.CrvPlate)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.StartDatum)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ApplicationUser.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Vehicle)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Pas aan</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Verwijder</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StartDatum)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Crv.Id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Crv.CrvPlate)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Pas aan</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Verwijder</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
