--- a/CCSB/CCSB/Views/Account/Register.cshtml
+++ b/CCSB/CCSB/Views/Account/Register.cshtml
@@ -25,6 +25,20 @@
             <span asp-validation-for="LastName" class="text-danger"></span>
         </div>
     </div>
+    <div class="form-group" row>
+        <label class="col-md-2" asp-for="Adres"></label>
+        <div class="col-md-10">
+            <input asp-for="Adres" class="form-control" />
+            <span asp-validation-for="Adres" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="form-group" row>
+        <label class="col-md-2" asp-for="Postcode"></label>
+        <div class="col-md-10">
+            <input asp-for="Postcode" class="form-control" />
+            <span asp-validation-for="Postcode" class="text-danger"></span>
+        </div>
+    </div>
     <div class="form-group row">
         <label class="col-md-2" asp-for="Email"></label>
         <div class="col-md-10">
