Added reserveringen underneath vehicles

--- a/CCSB/CCSB/Views/Vehicle/Index.cshtml
+++ b/CCSB/CCSB/Views/Vehicle/Index.cshtml
@@ -73,7 +73,7 @@
                             @foreach (var r in item.Reserveringen)
                             {
                                 <li>
-                                    @r.Crv
+                                    @item.CrvPlate
                                 </li>
                                 <li>
                                     @r.StartDatum
